--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,19 @@
   "description": "Lasersell side panel dashboard.",
   "permissions": ["sidePanel", "storage"],
   "action": {
-    "default_title": "LaserSell"
+    "default_title": "LaserSell",
+    "default_icon": {
+      "16": "assets/icon16.png",
+      "32": "assets/icon32.png",
+      "48": "assets/icon48.png",
+      "128": "assets/icon128.png"
+    }
+  },
+  "icons": {
+    "16": "assets/icon16.png",
+    "32": "assets/icon32.png",
+    "48": "assets/icon48.png",
+    "128": "assets/icon128.png"
   },
   "side_panel": {
     "default_path": "sidepanel.html"
