--- a/manifest.json
+++ b/manifest.json
@@ -25,8 +25,8 @@
   "background": {
     "service_worker": "background.js"
   },
-  "host_permissions": ["http://127.0.0.1:17777/*"],
+  "host_permissions": ["https://telemetry.lasersell.app/*"],
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; connect-src ws://127.0.0.1:17777;"
+    "extension_pages": "script-src 'self'; object-src 'self'; connect-src https://telemetry.lasersell.app;"
   }
 }
