--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "build:verify": "npm run build && node scripts/verify-dist.mjs"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.1",
